2005-03-11	Istvan Varga	<istvan@csounds.com>
	* InOut/widgets.cpp:
	* Top/csound.c:
	* Top/pvanal.c:
	  fixed calls of csoundYield() with NULL pointer
	* Engine/entry1.c:
	  fixed rtclock opcode (should be 0xffff, not 0xfffd)

2005-03-10	Istvan Varga	<istvan@csounds.com>
	* Engine/entry2.c:
	  run miditempo opcode both at init and performance time
	* Engine/musmon.c:
	  check for extra MIDI note-offs also when sustaining
	* Opcodes/freeverb.c:
	  attempts to correct high frequency attenuation for sample rate
	* Top/argdecode.c:
	  load external modules before printing opcode list

2005-03-09	Istvan Varga	<istvan@csounds.com>
	* Engine/insert.c:
	* OOps/schedule.c:
	  fixes in schedule opcodes
	* SConstruct:
	  removed checks for some unused headers
	* H/sysdep.h:
	  set DIRSEP to '\\' on Windows
	* Engine/envvar.c:
	  try_file_open(): do not test for directory on Windows (breaks WINE)
	* H/csdl.h:
	  removed macro definiton for AppendOpcode
	* InOut/libsnd.c:
	* OOps/diskin.c:
	  fixed soundin and diskin amplitude
	* Opcodes/freeverb.c:
	  new opcode

2005-03-08	Istvan Varga	<istvan@csounds.com>
	* Engine/insert.c:
	  MIDIinsert(): allow muting instrument by 'q' score opcode
	* Engine/linevent.c:
	  fixes in RTclose(); do not use atexit() to call this function
	  allow use of 'q' score opcode
	* Engine/musmon.c:
	  cleanup(): call RTclose() to close line input (-L)
	* InOut/libsnd.c:
	  do not close line input here; this is done by RTclose()
	* Top/argdecode.c:
	  allow use of -L stdin on Windows (mills_macintosh still disabled)
	* Top/csound.c:
	  csoundScoreEvent(): add p2 to current time, not section start time

2005-03-08	Istvan Varga	<istvan@csounds.com>
	* Engine/entry2.c:
	  added "event_i" opcode (same as "event" but runs at i-time)
	* Engine/fgens.c, Engine/memalloc.c, Engine/memfiles.c:
	* Engine/musmon.c, H/prototyp.h:
	* OOps/pstream.c, OOps/pvadd.c, OOps/pvread.c:
	* OOps/ugens3.c, OOps/ugens5.c, OOps/ugens8.c, OOps/ugens9.c: